# data-engg-final-project

./: data_explore.ipynb  pyproject.toml  ~$atus report 1.docx
scripts/: data_ingestion.py
